--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 server.port=8765
-spring.boot.admin.ui.title=AWACS
-spring.boot.admin.discovery.enabled=true
+#spring.boot.admin.context-path=/admin
+spring.main.allow-bean-definition-overriding=true
 
-spring.boot.admin.client.username=awacs
-spring.boot.admin.client.password=awacs
+spring.boot.admin.ui.title=AWACS Cloud Manage
 
 spring.security.user.name=awacs
 spring.security.user.password=awacs
